# FerrisLM

./: .gitignore  Cargo.toml  README.md
configs/: medium.toml  micro.toml  small.toml  tiny.toml  wikitext_micro.toml  wikitext_micro_long.toml  wikitext_tiny.toml
data/: corpus.txt  wikitext103.vocab.txt
examples/: generate.rs  prepare_data.rs  train.rs
scripts/: setup-msvc-cuda.ps1
src/: config.rs  device.rs  lib.rs
src/model/: deepseek.rs  mod.rs
src/nn/: block.rs  mla.rs  mod.rs  moe.rs  rmsnorm.rs  rope.rs  swiglu.rs
src/token/: bpe.rs  mod.rs
src/train/: checkpoint.rs  dataloader.rs  grad_clip.rs  loss.rs  mod.rs  scheduler.rs
tests/: grad_sanity.rs  mla_shapes.rs  moe_routing.rs  validate.rs
